add mobile zones api
