# src/routes/api/v1/index.ts
@@ -4,6 +4,7 @@ import { tenantResolve } from '../../../middleware/tenantResolve';
 import { authRouter } from './auth';
 import { catalogRouter } from './catalog';
 import { mobileOrdersRouter } from './mobileOrders';
+import { mobileZonesRouter } from './mobileZones';
 import { ordersRouter } from './orders';
 import { sessionsRouter } from './sessions';
 import { settingsRouter } from './settings';
@@ -22,6 +23,7 @@ apiV1Router.use('/staff', staffRouter);
 apiV1Router.use('/catalog', catalogRouter);
 apiV1Router.use('/orders', ordersRouter);
 apiV1Router.use('/mobile/orders', mobileOrdersRouter);
+apiV1Router.use('/mobile/zones', mobileZonesRouter);
 apiV1Router.use('/tables', tablesRouter);
 apiV1Router.use('/table-zones', tableZonesRouter);
 apiV1Router.use('/sessions', sessionsRouter);
